--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
+  "resolutions": {
+    "strip-ansi": "6.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "start:dev": "env-cmd -f .env.dev react-scripts start",
