--- a/.github/workflows/firebase-hosting-prod.yml
+++ b/.github/workflows/firebase-hosting-prod.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install firebase tools
         run: |
           sudo npm install -g firebase-tools
-          firebase use rid1-test --token ${{secrets.FIREBASE_SERVICE_ACCOUNT_SEEDS}}
+          firebase use seeds-finance --token ${{secrets.FIREBASE_SERVICE_ACCOUNT_SEEDS}}
 
       - name: Build website
         run: |
