--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment-timezone": "^0.5.34",
     "react": "^18.1.0",
     "react-csv": "^2.2.2",
+    "react-currency-input-field": "^3.8.0",
     "react-daisyui": "^5.0.0",
     "react-datepicker": "^4.11.0",
     "react-datetime": "^3.2.0",
