--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "cookies-js": "^1.2.3",
     "daisyui": "^4.7.2",
+    "dayjs": "^1.11.10",
     "env-cmd": "^10.1.0",
     "formik": "^2.2.9",
     "i18next": "^22.4.9",
