--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-icons": "^4.4.0",
     "react-phone-number-input": "^3.3.6",
     "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
