--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "typescript": "^4.7.3",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "resolutions": {
