--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-select": "^5.4.0",
     "react-slugify": "^2.1.0",
     "react-toastify": "^9.0.7",
+    "recharts": "^2.12.7",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
