--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-datepicker": "^4.11.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.1.0",
+    "react-easy-crop": "^5.0.7",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.34.0",
     "react-i18next": "^12.1.5",
