--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
+GENERATE_SOURCEMAP=false
 SKIP_PREFLIGHT_CHECK=true
 
-REACT_APP_REST_HOST=https://app.seeds.finance
+REACT_APP_REST_HOST=http://54.66.204.39:3001
