--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tinymce/tinymce-react": "^4.3.2",
     "@uiw/react-md-editor": "^4.0.3",
     "axios": "^0.27.2",
+    "chart.js": "^4.4.8",
     "cookies-js": "^1.2.3",
     "daisyui": "^4.7.2",
     "dayjs": "^1.11.10",
